# csinterop

./: CMakeLists.txt
dotnet/: CMakeLists.txt  CSharpProject.csproj  Program.cs
dotnet/Properties/: launchSettings.json
interop/: CMakeLists.txt  interop.i  main.cpp
native/: CMakeLists.txt  config.h.in  mylib.cpp  mylib.h
